--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --env-file=dev.env index.js",
+    "dev": "nodemon --env-file=sample.env index.js",
     "prod": "node --env-file=production.env index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
