--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,9 @@
-WEB_PORT=
+WEB_PORT=3001
 
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
-DB_PORT=
+DB_HOST=127.0.0.1
+DB_USER=root
+DB_PASS=P@ssw0rd
+DB_NAME=diving
+DB_PORT=3306
 
 # 自己開一個 dev.env 檔案，連線自己的資料庫
