--- a/dev.env
+++ b/dev.env
@@ -3,7 +3,7 @@ WEB_PORT=3001
 DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASS=
-DB_NAME=diving
+DB_NAME=goodiving
 DB_PORT=3306
 
 JWT_KEY=djdjk/lajei;jkfjeaek;/njv/zek/;ae
