發送忘記OTP信、驗證OTP、重設密碼

--- a/dev.env
+++ b/dev.env
@@ -7,5 +7,12 @@ DB_NAME=goodiving
 DB_PORT=3306
 
 JWT_KEY=djdjk/lajei;jkfjeaek;/njv/zek/;ae
+OTP_SECRET=KVKFKRCPNZQUYMLXOVYDSQKJKZDTSRLD
 
 # 自己開一個 dev.env 檔案，連線自己的資料庫
+
+
+# Gmail 發信
+EMAIL_USER=goodiving123456@gmail.com
+GMAIL_PASS=zkdywommgaqrqzfs
+GMAIL_USER=goodiving123456@gmail.com
