--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "express-session": "^1.18.0",
-    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
+    "otplib": "^12.0.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
