--- a/dev.env
+++ b/dev.env
@@ -1,10 +1,13 @@
 WEB_PORT=3001
 
 DB_HOST=127.0.0.1
-DB_USER=look
+DB_USER=root
 DB_PASS=
 DB_NAME=goodiving
 DB_PORT=3306
+
+channel_id=2006556386
+channel_secret_key=044354c7855611a40b85e9a430486c2e
 
 JWT_KEY=djdjk/lajei;jkfjeaek;/njv/zek/;ae
 
