--- a/dev.env
+++ b/dev.env
@@ -7,7 +7,8 @@ DB_NAME=goodiving
 DB_PORT=3306
 
 channel_id=2006556386
-channel_secret_key=044354c7855611a40b85e9a430486c2e
+channel_secret=044354c7855611a40b85e9a430486c2e
+linepay_api_url=https://sandbox-api-pay.line.me
 
 JWT_KEY=djdjk/lajei;jkfjeaek;/njv/zek/;ae
 
