Update ecpay & .env & index.js & package.json

--- a/dev.env
+++ b/dev.env
@@ -20,3 +20,13 @@ OTP_SECRET=KVKFKRCPNZQUYMLXOVYDSQKJKZDTSRLD
 EMAIL_USER=goodiving123456@gmail.com
 GMAIL_PASS=zkdywommgaqrqzfs
 GMAIL_USER=goodiving123456@gmail.com
+
+# ecpay(綠界)用
+ECPAY_MERCHANT_ID=3002607
+ECPAY_HASH_KEY=pwFHCqoQZGmho4w6
+ECPAY_HASH_IV=EkRm7iFT261dpevs
+ECPAY_TEST=true
+ECPAY_RETURN_URL=http://localhost:3001/test/ecpay/callback
+ECPAY_ORDER_RESULT_URL=http://localhost:3001/api/ecpay/result
+## 前端綠界付款完成後導向路由
+ECPAY_ORDER_CALLBACK_URL=http://localhost:3000/test/ecpay/callback
