--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.0",
