--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=dev.env index.js",
-    "prod": "node --env-file=production.env index.js",
+    "prod": "node --env-file=dev.env index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
